# hd-map-pipeline

./: .dockerignore  .gitignore  CLAUDE.md  PRD.md  README.md  compose.yml  requirements-pipeline.txt  requirements.txt  setup.py
.github/workflows/: deploy.yml
configs/: __init__.py  default.yaml  kitti.yaml  viz.json
data/outputs/: features.geojson  qa_report.json
docker/: Dockerfile.api  Dockerfile.pipeline  Dockerfile.viz  docker-compose.yml
docs/: benchmarks.md
scripts/: benchmark.py  evaluate_model.py  measure_viewer_fps.mjs  prepare_nuscenes_training.py  run_pipeline.py
src/: __init__.py
src/api/: server.py
src/data/: __init__.py  kitti.py  nuscenes.py  types.py
src/ext/: CMakeLists.txt  __init__.py  bindings.cpp  voxel_filter.cpp
src/filters/: __init__.py  ground_plane.py  outlier.py  voxel.py
src/geometry/: __init__.py  polyline.py  transforms.py
src/ml/: __init__.py  infer.py  train.py  unet.py
src/pipeline/: __init__.py  bev.py  extract.py  fuse.py  ingest.py  qa.py
src/viz/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/viz/public/: data
tests/: test_config.py  test_integration_docs.py
tests/data/: test_kitti.py  test_nuscenes.py
tests/filters/: test_ground_plane.py  test_outlier.py  test_voxel.py
tests/geometry/: test_polyline.py  test_transforms.py
tests/ml/: test_infer.py  test_train.py  test_unet.py
tests/pipeline/: test_bev.py  test_extract.py  test_fuse.py  test_ingest.py  test_qa.py
tests/scripts/: test_evaluate_model.py  test_prepare_nuscenes_training.py  test_run_pipeline.py
(+17 files in other folders)
